# cv

./: .gitignore  README.md  bootstrap.sh  build.sh  deploy.sh  ship.sh
backend/: Dockerfile  requirements.txt
backend/app/: cv.yaml  main.py
frontend/: .dockerignore  Dockerfile.nginx  Dockerfile.wasm-build
frontend/nginx/: default.conf.template  docker-entrypoint.sh
frontend/qt/: CMakeLists.txt  main.cpp  resources.qrc
frontend/qt/qml/: CvPage.qml  IntroPage.qml  Main.qml  UnderTheHood.qml
infra/: docker-compose.local.yml
